Closed Bug 1735233 Opened 3 years ago Closed 3 years ago

[clang-13] MacRunFromDmgUtils.mm:236:21: error: variable 'result' set but not used [-Werror,-Wunused-but-set-variable]

Categories

(Toolkit :: General, defect)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox95 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

[task 2021-10-11T21:23:45.535Z] 21:23:45    ERROR -  /builds/worker/checkouts/gecko/toolkit/xre/MacRunFromDmgUtils.mm:236:21: error: variable 'result' set but not used [-Werror,-Wunused-but-set-variable]
[task 2021-10-11T21:23:45.535Z] 21:23:45     INFO -    __block NSInteger result = -1;
[task 2021-10-11T21:23:45.535Z] 21:23:45     INFO -                      ^
[task 2021-10-11T21:23:45.536Z] 21:23:45     INFO -  1 warning and 1 error generated.
[task 2021-10-11T21:23:45.536Z] 21:23:45    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:685: Unified_mm_toolkit_xre0.o] Error 1
[task 2021-10-11T21:23:45.536Z] 21:23:45     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/toolkit/xre'
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/1acc1364ea10
Fix unused-but-set-variable warning in MacRunFromDmgUtils.mm. r=mstange
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: