Bug 1735233 - Fix unused-but-set-variable warning in MacRunFromDmgUtils.mm. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D128129